--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ inquirerpy~=0.3.4
 # Language models
 vercel-llm-api # For ChatGPT
 gpt4all~=0.2.1 # For GPT4All
+imaginepy # For upscaling
 
 # Only for Replit keep_alive
 flask~=2.3.2
