--- a/example_config.json
+++ b/example_config.json
@@ -2,5 +2,6 @@
   "chatbot": true,
   "model": "gpt-3.5-turbo",
   "loading_gif": "https://tenor.com/view/loading-gif-9212724",
-  "sync": true
+  "sync": true,
+  "image_model": "stable_diffusion_2.1"
 }
