Upgrade project to use SDXL by default Update README.md

--- a/example_config.json
+++ b/example_config.json
@@ -3,5 +3,5 @@
   "model": "gpt-3.5-turbo",
   "loading_gif": "https://tenor.com/view/loading-gif-9212724",
   "sync": true,
-  "image_model": "stable_diffusion_2.1"
+  "image_model": "SDXL 1.0"
 }
