--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,14 @@
-discord~=2.2.3
-requests~=2.28.2
-python-dotenv~=1.0.0
-pyyaml~=6.0
-Pillow~=9.5.0
-urllib3~=1.26.16
-aiohttp~=3.8.4
-httpx~=0.24.1
+discord.py~=2.3.2
+requests~=2.32.2
+python-dotenv~=1.0.1
+pyyaml~=6.0.1
+Pillow~=10.3.0
+urllib3~=2.2.1
+aiohttp~=3.9.5
+httpx~=0.27.0
 inquirerpy~=0.3.4
 
 # Language models
-gpt4all~=0.2.1 # For GPT4All
-imaginepy # For upscaling
+gpt4all~=2.6.0 # For GPT4All
+imaginepy~=2.0.1 # For upscaling
 g4f
