--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,18 @@
 discord.py~=2.3.2
 requests~=2.32.2
 python-dotenv~=1.0.1
-pyyaml~=6.0.1
-Pillow~=10.3.0
-urllib3~=2.2.1
-aiohttp~=3.9.5
-httpx~=0.27.0
 inquirerpy~=0.3.4
 
-# Language models
+pyyaml~=6.0.1
+Pillow~=10.3.0
+
+# I don't think we need these
+# urllib3~=2.2.1
+# aiohttp~=3.9.5
+# httpx~=0.27.0
+
 imaginepy~=2.0.1 # For upscaling
+
+# Language models
+openai~=1.30.4
 g4f
