Remove ChatGPT for Groq #82 #81 #78 Add quit option to menu

--- a/example.env
+++ b/example.env
@@ -1,4 +1,4 @@
 BOT_TOKEN=<your_bot_token>
 API_KEY=<your_api_key>
 PRODIA_KEY=<your_prodia_api_key>
-CHATGPT_KEY=<your_chatgpt_key>
+GROQ_KEY=<your_groq_key>
