--- a/example_config.json
+++ b/example_config.json
@@ -1,6 +1,6 @@
 {
   "chatbot": true,
-  "model": "ChatGPT",
+  "model": "Llama3",
   "loading_gif": "https://tenor.com/view/loading-gif-9212724",
   "sync": true,
   "image_model": "SDXL 1.0"
