--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,15 @@
-discord.py~=2.3.2
-requests~=2.32.2
+discord.py~=2.4.0
+requests~=2.32.3
 python-dotenv~=1.0.1
 inquirerpy~=0.3.4
 
-pyyaml~=6.0.1
-Pillow~=10.3.0
-
-# I don't think we need these
-# urllib3~=2.2.1
-# aiohttp~=3.9.5
-# httpx~=0.27.0
-
 imaginepy~=2.0.1 # For upscaling
+pillow==11.0.0
 
-# Language models
-openai~=1.30.4
-g4f
+# For OpenAI compatible APIs
+openai~=1.57.0
+
+# A needed dependency for discord.py
+audioop-lts~=0.2.1
+# More dependencies
+pyyaml~=6.0.2
